--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,10 +2,8 @@
 @import './core/mixins';
 @import './core/root';
 @import './core/interfaces';
-
 @import './reset';
 @import './main';
-
 @import './components/common/container';
 @import './components/common/navigation';
 @import './components/common/footer';
@@ -14,35 +12,38 @@
 @import './components/common/icon';
 @import './components/common/sidebar';
 @import './components/common/blur';
-
+@import './components/common/post';
+@import './components/common/number';
 @import './components/home/header';
-
 @import './components/portfolio/item';
-
 @import './components/notes/list';
 @import './components/notes/sidebar';
+@import './components/for-developers/posts';
 
-
-
-@media screen and (max-width: map-get($breackpoints, "xxl")) {
+@media screen and (max-width: map-get($breackpoints, 'xxl')) {
+    // 
 }
 
-@media screen and (max-width: map-get($breackpoints, "xl")) {
+@media screen and (max-width: map-get($breackpoints, 'xl')) {
+    // 
 }
 
-@media screen and (max-width: map-get($breackpoints, "lg")) {
+@media screen and (max-width: map-get($breackpoints, 'lg')) {
     @include container--lg;
     @include sidebar--lg;
+    @include post--lg;
+    @include for-developers--lg;
 }
 
-@media screen and (max-width: map-get($breackpoints, "md")) {
+@media screen and (max-width: map-get($breackpoints, 'md')) {
     @include sidebar--md;
 }
 
-@media screen and (max-width: map-get($breackpoints, "sm")) {
+@media screen and (max-width: map-get($breackpoints, 'sm')) {
     @include root--sm;
     @include interfaces--sm;
     @include navigation--sm;
     @include footer--sm;
     @include sidebar--sm;
+    @include post--sm;
 }
