--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -1,15 +1,15 @@
-html, body {
+html,
+body {
     min-height: 100vh;
 }
 
 body {
     @extend #font-base;
+    background-color: $color-background-base;
+    color: $color-font-base;
 
     display: flex;
     flex-direction: column;
-
-    color: $color-font-base;
-    background-color: $color-background-base;
 }
 
 h1 {
@@ -22,4 +22,8 @@ h1 {
 
 h2 {
     @extend #font-lg;
+}
+
+strong {
+    font-weight: 500;
 }
