--- a/resources/scss/components/common/container.scss
+++ b/resources/scss/components/common/container.scss
@@ -19,10 +19,10 @@
 }
 
 .container-aspect {
-    --aspect-ratio: (1 / 2);
-
     position: relative;
     overflow: hidden;
+
+    --aspect-ratio: (1 / 2);
 
     &::after {
         content: '';
@@ -30,12 +30,15 @@
         padding-bottom: calc(100% / var(--aspect-ratio));
     }
 
-    * {
+    img,
+    picture {
         position: absolute;
         left: 0;
         top: 0;
+
         width: 100%;
         height: 100%;
+
         object-fit: cover;
         object-position: center;
     }
