--- a/resources/scss/components/common/sidebar.scss
+++ b/resources/scss/components/common/sidebar.scss
@@ -1,40 +1,49 @@
 .sidebar {
+    grid-column: 5 span / 13;
+
+    @include ph('md-2');
+    @include pv('md-1');
+    
+    background-color: $color-foreground-base;
+    
     &-wrapper {
         @extend .container-grid;
+        
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: $z-index-sidebar;
+
         justify-content: flex-end;
 
-        position: fixed;
-        z-index: $z-index-sidebar;
-        left: 0;
-        top: 0;
-        
-        width: 100%;
         height: 100%;
+        width: 100%;
 
-        visibility: hidden;
+        visibility: hidden;        
 
         &.active {
             visibility: visible;
         }
     }
 
-    @include ph('md-2');
-    @include pv('md-1');
-    grid-column: 5 span / 13;
-    background-color: $color-foreground-base;
-
     &__header {
         @include mb('md-1');
         display: flex;
-        justify-content: flex-end;
+        align-items: center;
+        justify-content: space-between;
     }
 
     &__content {
         overflow: auto;
-
-        &::-webkit-scrollbar { display: none; } /* Hide scrollbar for Chrome, Safari and Opera */
         -ms-overflow-style: none;  /* IE and Edge */
         scrollbar-width: none;  /* Firefox */
+
+        &::-webkit-scrollbar { display: none; } /* Hide scrollbar for Chrome, Safari and Opera */
+    }
+
+    &__info-text {
+        position: relative;
+        top: 2px;
     }
 }
 
