--- a/resources/scss/components/notes/list.scss
+++ b/resources/scss/components/notes/list.scss
@@ -10,8 +10,11 @@
         @include mr('base');
 
         padding: 1em 1.5em;
+        overflow: hidden;
 
         text-align: left;
+        text-overflow: ellipsis;
+        white-space: nowrap;
 
         background-color: $color-foreground-base;
         border: solid 1px map-get($map: $colors, $key: 'gray');
