--- a/resources/scss/core/variables.scss
+++ b/resources/scss/core/variables.scss
@@ -28,6 +28,11 @@ $fonts: (
         'line': 1.5em,
         'weight': 400
     ),
+    'sm': (
+        'size': math.div(12, 16) + 'rem',
+        'line': 1em,
+        'weight': 400
+    ),
 );
 
 $fonts--sm: (
@@ -38,7 +43,7 @@ $fonts--sm: (
     ),
     'lg': (
         'size': math.div(32, 16) + 'rem',
-        'line': 1em,
+        'line': 1.1em,
         'weight': 500
     ),
     'md-2': (
@@ -56,39 +61,44 @@ $fonts--sm: (
         'line': 1.5em,
         'weight': 400
     ),
+    'sm': (
+        'size': math.div(10, 16) + 'rem',
+        'line': 1em,
+        'weight': 400
+    ),
 );
 
 $spaces: (
     'sm-1': 0.25rem,
-    'sm-2': 0.50rem,
-    'base': 1.00rem,
-    'md-1': 1.50rem,
-    'md-2': 3.00rem,
-    'md-3': 5.00rem,
-    'lg-1': 8.00rem,
-    'lg-2': 10.00rem,
-    'lg-3': 12.00rem,
+    'sm-2': 0.5rem,
+    'base': 1rem,
+    'md-1': 1.5rem,
+    'md-2': 3rem,
+    'md-3': 5rem,
+    'lg-1': 8rem,
+    'lg-2': 10rem,
+    'lg-3': 12rem,
 );
 
 $spaces--sm: (
     'sm-1': 0.25rem,
-    'sm-2': 0.50rem,
-    'base': 1.00rem,
-    'md-1': 1.50rem,
-    'md-2': 1.50rem,
-    'md-3': 4.00rem,
-    'lg-1': 5.00rem,
-    'lg-2': 6.00rem,
-    'lg-3': 8.00rem,
+    'sm-2': 0.5rem,
+    'base': 1rem,
+    'md-1': 1.5rem,
+    'md-2': 1.5rem,
+    'md-3': 4rem,
+    'lg-1': 5rem,
+    'lg-2': 6rem,
+    'lg-3': 8rem,
 );
 
 $colors: (
-    'white':      #ffffff,
-    'gray':       #D3D3D3,
-    'black':      #333333,
+    'white':      #fff,
+    'gray':       #d3d3d3,
+    'black':      #333,
     'blue':       #0144ff,
     'light-blue': #e1f2ff,
-    'green':      #77dd77,
+    'green':      #7d7,
 );
 
 $color-background-base: map-get($map: $colors, $key: 'light-blue');
@@ -97,7 +107,7 @@ $color-font-base: map-get($map: $colors, $key: 'black');
 $color-font-link: map-get($map: $colors, $key: 'blue');
 
 $breackpoints: (
-    "sm": 600px,
+    'sm': 600px,
     'md': 768px,
     'lg': 1024px,
     'xl': 1200px,
@@ -106,3 +116,16 @@ $breackpoints: (
 
 $z-index-sidebar: 10;
 $z-index-blur: 5;
+
+// for notes 
+
+// code {
+//     background-color: #ff6d6d;
+//     color: rgb(255 255 255);
+//     border-radius: 3px;
+//     padding: 0 0.55em;
+//     padding-top: 0;
+//     letter-spacing: 0.05em;
+//     padding-bottom: 0.1em;
+//     opacity: 0.75;
+// }
