--- a/resources/scss/reset.scss
+++ b/resources/scss/reset.scss
@@ -1,28 +1,27 @@
 *,
 *::after,
 *::before {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    outline: none;
-    box-sizing: border-box;
 }
 
 body {
-    margin: 0;
     font-family: $font-family-base;
+    margin: 0;
     overflow-wrap: break-word;
 }
 
 ul {
-    padding: 0;
     list-style: none;
+    padding: 0;
 }
 
 a {
     color: inherit;
     text-decoration: none;
 
-    &:hover {
+    &:link:hover {
         text-decoration: underline;
     }
 }
@@ -32,14 +31,15 @@ button {
     font-size: inherit;
 
     background-color: transparent;
-    border: none;
+    border: 0;
 
     &:hover {
         cursor: pointer;
     }
 }
 
-input, textarea {
+input,
+textarea {
     font-family: $font-family-base;
     font-size: inherit;
 }
