add code tag and styles for notes' paragraphs

--- a/resources/scss/components/notes/sidebar.scss
+++ b/resources/scss/components/notes/sidebar.scss
@@ -21,6 +21,19 @@
 
     &__paragraph {
         @include mb('md-1');
+
+        code {
+            background-color: #ff6d6d;
+            color: rgb(255 255 255);
+            border-radius: 3px;
+            // padding: 0 0.55em;
+            padding: 0 0.4em;
+            padding-top: 0;
+            letter-spacing: 0.05em;
+            padding-bottom: 0.1em;
+            opacity: 0.75;
+
+        }
     }
 
     &__links-title {
